// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageButton renders correctly 1`] = `
<span
  aria-label="alt-text"
  className="css-class-name"
  onClick={[Function]}
  role="button"
  tabIndex={0}
>
  <img
    alt="alt-text"
    className={undefined}
    src="test.png"
  />
</span>
`;

exports[`ImageButton renders correctly 2`] = `
<span
  aria-label="alt-text"
  className="css-class-name"
  onClick={[Function]}
  role="button"
  tabIndex="1"
>
  <img
    alt="alt-text"
    className={undefined}
    src="test.png"
  />
</span>
`;
